Basic login and admin controllers

--- a/config/locales/es/activerecord.yml
+++ b/config/locales/es/activerecord.yml
@@ -30,3 +30,7 @@ es:
         content: "Descripción"
         sid: "Historia Pivital"
         pid: "Proyecto Pivotal"
+      user:
+        email: "Email"
+        password: "Contraseña"
+        password_confirmation: "Confirmación de contraseña"
