Added factory girl with rails support, cucumber and some fixes

--- a/config/locales/es/views.yml
+++ b/config/locales/es/views.yml
@@ -5,3 +5,5 @@ es:
         name: "Nombre"
         password: "Contraseña (minimo 6 caracteres)"
         password_confirmation: "Confirmar contraseña (vuelve a escribir la contraseña)"
+      company:
+        name: "Nombre que se pone en los formularios"
